--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: CodeOnTap
+site_name: CodeOnTap Docs
 theme: readthedocs
 markdown_extensions:
   - admonition
@@ -6,11 +6,11 @@ markdown_extensions:
       permalink: true
 
 nav: 
-  - 'Introduction': 'README.md'
+  - 'Introduction': './README.md'
   - 'Getting Started' : 
-    - 'Introduction' : 'getting-started/README.md'
-    - 'Local Environment Setup' : 'getting-started/local-env-setup.md'
-    - 'Create CMDB' : 'getting-started/cmdb-setup.md'
-    - 'Deploy Components' : 'getting-started/deploy-components.md'
+    - 'Introduction' : './getting-started/README.md'
+    - 'Local Environment Setup' : './getting-started/local-env-setup.md'
+    - 'Create CMDB' : './getting-started/cmdb-setup.md'
+    - 'Deploy Components' : './getting-started/deploy-components.md'
   - 'About' :
-    - 'Release Process' : 'about/versioning.md'
+    - 'Release Process' : './about/versioning.md'
