--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
-site_name: CodeOnTap Docs
+site_name: CodeOnTap
 docs_dir: docs
+
 repo_url: https://github.com/codeontap/codeontap/
 
 theme: readthedocs
