--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,9 @@ nav:
   - 'Reference' : 
     - 'Components' : './reference/component-reference.md'
     - 'Configuration Management Database' : './reference/cmdb-reference.md'
-  - 'Release Notes': './changelog.md'
+  - 'Release Notes' :
+    - '5.5' : '.change-logs/5.5.md'
+    - '6.0' : '.change-logs/6.0.md'
   - 'Advanced' : 
     - 'Introduction' : './advanced/index.md'
     - 'Versioning' : './advanced/versioning.md'
