--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ markdown_extensions:
       custom_fences:
         - name: mermaid
           class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_div_format
+          format: '!!python/name:pymdownx.superfences.fence_div_format'
 
 extra_javascript:
   - https://unpkg.com/mermaid@8.4.3/dist/mermaid.min.js
