--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,4 +1,19 @@
-build:
-  image: latest
+# .readthedocs.yml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-requirements_file: requirements.txt
+# Required
+version: 2
+
+mkdocs:
+  configuration: mkdocs.yml
+
+formats: all
+
+build:
+  image: stable
+
+python:
+  version: 3.7
+  install:
+    - requirements: requirements.txt
